Disable ZGC as default garbage collector (#346)